# BakaMsvc

./: CMakeLists.txt  CMakePresets.json  address_table.ixx  native_dll.cpp  vc140.idb  vcpkg.json
